Add source for jdk_1.5.0_02